--- a/VolgogradStadion/style.css
+++ b/VolgogradStadion/style.css
@@ -7,9 +7,8 @@
 {
     font-size: 18px;
     text-decoration: none;
-
 }
-.pagelist
+.pageList
 {
     border-radius: 15px;
     border: 1px solid #2489FF;
@@ -18,3 +17,12 @@
 {
     color:grey;
 }
+@media (max-width: 980px) {
+    .fontSize-30{
+        font-size: 35px;
+    }
+    .fontSize-18 {
+      font-size: 30px;
+      text-decoration: none;
+    }
+  }
