--- a/VolgogradStadion/style.css
+++ b/VolgogradStadion/style.css
@@ -1,4 +1,9 @@
-
+/* Style */
+.root
+{
+    --black-color: #000000;
+    --main-color: #2489FF;
+}
 .fontSize-30
 {
     font-size: 30px;
@@ -11,12 +16,38 @@
 .pageList
 {
     border-radius: 15px;
-    border: 1px solid #2489FF;
+    border: 1px, solid, var(--main-color);
 }
 .active
 {
     color:grey;
 }
+.aData
+{
+    color:white;
+    position: absolute;
+    /* border-radius: 15px; */
+    margin-left: 20px;
+    margin-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    z-index: 1;
+}
+.aData::before
+{
+    z-index: -1;
+    position: absolute;
+    content: "";
+    border: 1px solid black;
+    background-color: black;
+    border-radius: 5px;
+    opacity: 0.7;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+/* Media */
 @media (max-width: 980px) {
     .fontSize-30{
         font-size: 35px;
