--- a/OilPower/style.css
+++ b/OilPower/style.css
@@ -5,6 +5,11 @@
     --bg-color-card-active: #349CE3;
     --bg-color-card-image:#f3f6fa;
 }
+a
+{
+ text-decoration: none;
+ color: black;
+}
 /* fonts */
 @font-face
 {
@@ -41,43 +46,44 @@
     justify-content: center;
 }
 .cataloge-card__elem{
-max-width: 270px;
+max-width: 260px;
+height: 250px;
 width: 100%;
-/* flex: 300px; */
 display: flex;
 flex-direction: column;
 background-color: var(--bg-color-card-image);
-border: 2px solid var(--bg-color-card);
-border-radius: .25rem;
+ border: 2px solid var(--bg-color-card); 
+border-radius: 10px 10px 10px 10px;
 }
 .cataloge-card-all:hover
 {
     border: 2px solid var(--bg-color-card-active);
     /* background-color: var(--bg-color-card-active); */
+    border-radius: 10px 10px 10px 10px;
 }
 .cataloge-card-body
 {
-    padding: 10px;
+    padding: 5px; 
     background-color: var(--bg-color-card);
     text-align:center;
-    vertical-align: bottom;
+    border-radius: 0 0 4px 4px;
 }
 .cataloge-card-title
 {
-    border-bottom-left-radius:11px;
-    border-bottom-right-radius:11px;
     margin-bottom: .5rem;
     color: black;
     text-decoration: none;
     font-size: 18px;
     font-family: Roboto-Regular;
-
+    display: block;
 
 }
 .cataloge-card-body:hover
 {
-    border: 2px solid var(--bg-color-card-active);
-    background-color: var(--bg-color-card-active);
+    text-decoration: none;
+    border-radius: 0 0 4px 4px;
+    /* border: 2px solid var(--bg-color-card-active); */
+     background-color: var(--bg-color-card-active); 
 }
 .cataloge-card-image
 {
@@ -152,7 +158,7 @@ border-radius: .25rem;
   
   @media (min-width: 991.98px) {
     .body-container {
-      max-width: 960px;
+      max-width: 920px;
     }
     .cataloge-main-p
     {
@@ -164,7 +170,7 @@ border-radius: .25rem;
     }
     .cataloge-card__elem
     {
-        max-width: 270px;
+        max-width: 260px;
     }
     .cataloge-card-title
     {
@@ -174,6 +180,6 @@ border-radius: .25rem;
   
   @media (min-width: 1199.98px){
     .body-container {
-      max-width: 1140px;
+      max-width: 920px;
     }
   }
