--- a/OilPower/style.css
+++ b/OilPower/style.css
@@ -42,10 +42,10 @@ a
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 30px;
+    gap: 25px;
     justify-content: center;
 }
-.cataloge-card__elem{
+.cataloge-cards__elem{
 max-width: 260px;
 height: 250px;
 width: 100%;
@@ -55,37 +55,37 @@ background-color: var(--bg-color-card-image);
  border: 2px solid var(--bg-color-card); 
 border-radius: 10px 10px 10px 10px;
 }
-.cataloge-card-all:hover
+.cataloge-cards__elem:hover
 {
     border: 2px solid var(--bg-color-card-active);
     /* background-color: var(--bg-color-card-active); */
     border-radius: 10px 10px 10px 10px;
 }
-.cataloge-card-body
+
+.cataloge-cards__body
 {
-    padding: 5px; 
-    background-color: var(--bg-color-card);
-    text-align:center;
-    border-radius: 0 0 4px 4px;
-}
-.cataloge-card-title
-{
-    margin-bottom: .5rem;
+
     color: black;
     text-decoration: none;
     font-size: 18px;
     font-family: Roboto-Regular;
     display: block;
+    /* padding: 5px;  */
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: var(--bg-color-card);
+    text-align:center;
+    border-radius: 0 0 4px 4px;
 
 }
-.cataloge-card-body:hover
+.cataloge-cards__body:hover
 {
     text-decoration: none;
     border-radius: 0 0 4px 4px;
     /* border: 2px solid var(--bg-color-card-active); */
      background-color: var(--bg-color-card-active); 
 }
-.cataloge-card-image
+.cataloge-cards-image
 {
     display: block;
     width: 200px;
@@ -140,11 +140,11 @@ border-radius: 10px 10px 10px 10px;
     {
         font-size: 30px;
     }
-    .cataloge-card__elem
+    .cataloge-cards__elem
     {
         max-width: 330px;
     }
-    .cataloge-card-title
+    .cataloge-cards-title
     {
         font-size:30px;
     }
@@ -158,7 +158,7 @@ border-radius: 10px 10px 10px 10px;
   
   @media (min-width: 991.98px) {
     .body-container {
-      max-width: 920px;
+      max-width: 870px;
     }
     .cataloge-main-p
     {
@@ -168,11 +168,11 @@ border-radius: 10px 10px 10px 10px;
     {
         font-size: 18px;
     }
-    .cataloge-card__elem
+    .cataloge-cards__elem
     {
         max-width: 260px;
     }
-    .cataloge-card-title
+    .cataloge-cards-title
     {
         font-size:18px;
     }
@@ -180,6 +180,6 @@ border-radius: 10px 10px 10px 10px;
   
   @media (min-width: 1199.98px){
     .body-container {
-      max-width: 920px;
+      max-width: 870px;
     }
   }
