--- a/OilPower/style.css
+++ b/OilPower/style.css
@@ -198,7 +198,7 @@ border-radius: 10px 10px 10px 10px;
     padding-left: 15px;
     padding-bottom: 15px
 }
-.shopmore-cards_body
+.shopmore-cards__body
 {
     padding: 15px;
     display: flex;
@@ -337,13 +337,9 @@ border-radius: 10px 10px 10px 10px;
         margin: 0 auto;
         
     }
-    .more-content img
+    .shop-sidebar
     {
-        width: 100%;
-    }
-    .cataloge-main-p
-    {
-        font-size: 50px;
+        display: none;
     }
     .cataloge-breadcrumb
     {
@@ -364,10 +360,6 @@ border-radius: 10px 10px 10px 10px;
   @media (min-width: 767.98px){
     .body-container {
       max-width: 750px;	
-    }
-    .main-content
-    {
-        /* padding-left: 150px; */
     }
     .breadcrumb-container
     {
