--- a/OilPower/style.css
+++ b/OilPower/style.css
@@ -149,14 +149,14 @@ border-radius: 10px 10px 10px 10px;
     flex-direction: column;
     border-bottom: 2px solid var(--bg-color-shop-sidebord);
 }
-.shop-sidebar__elem_active
+.shop-sidebar__elem-active
 {
     background-color: var(--bg-color-shop-sidebord-active);
     width: 80%;
     display: flex;
     flex-direction: column;
 }
-.shop-sidebar__elem_more
+.shop-sidebar__elem-more
 {
     border-bottom: 2px solid var(--bg-color-shop-sidebord);
     background-color: var(--bg-color-shop-sidebord-more);
@@ -164,7 +164,7 @@ border-radius: 10px 10px 10px 10px;
     display: flex;
     flex-direction: column;
 }
-.shop-sidebar__elem_bottom
+.shop-sidebar__elem-bottom
 {
     width: 80%;
     background-color: white;
@@ -172,7 +172,7 @@ border-radius: 10px 10px 10px 10px;
     flex-direction: column;
     border-radius: 10px;
 }
-.shop-sidebar__elem_a {
+.shop-sidebar__elem-a {
     padding: 10px 0;
     font-size: 14px;
     display: block;
@@ -184,6 +184,14 @@ border-radius: 10px 10px 10px 10px;
     width: 100%;
 }
 /* Shop More */
+.shopmore-cards
+{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 25px;
+    justify-content: flex-start;
+}
 .shopmore-cards__elem{
     max-width: 270px;
     width: 100%;
@@ -247,11 +255,11 @@ border-radius: 10px 10px 10px 10px;
     padding-bottom: 60px;
     padding-top: 20px;
 }
-.more-card_body
+.more-card__body
 {
     padding-left: 40px
 }
-.more-card_body__h3-span
+.more-card__body-h3-span
 {
      padding-bottom:20px;
     padding-top: 20px;
@@ -321,7 +329,7 @@ border-radius: 10px 10px 10px 10px;
     padding-top:30px;
     width: 350px;
 }
-.more-content__img__elem
+.more-content__img-elem
 {
     width: 500px;
 }
