--- a/OilPower/style.css
+++ b/OilPower/style.css
@@ -96,7 +96,7 @@ border-radius: 10px 10px 10px 10px;
     border-radius: 0 0 4px 4px;
      background-color: var(--bg-color-card-active); 
 }
-.cataloge-cards__image
+.cataloge-cards-image
 {
     padding: 15px 0;
     display: block;
@@ -149,22 +149,22 @@ border-radius: 10px 10px 10px 10px;
     flex-direction: column;
     border-bottom: 2px solid var(--bg-color-shop-sidebord);
 }
-.shop-sidebar__elem-active
+.shop-sidebar__elem--active
 {
     background-color: var(--bg-color-shop-sidebord-active);
-    width: 80%;
+    /* width: 80%; */
     display: flex;
     flex-direction: column;
 }
-.shop-sidebar__elem-more
+.shop-sidebar__elem--more
 {
     border-bottom: 2px solid var(--bg-color-shop-sidebord);
     background-color: var(--bg-color-shop-sidebord-more);
-    width: 80%;
+    /* width: 80%; */
     display: flex;
     flex-direction: column;
 }
-.shop-sidebar__elem-bottom
+.shop-sidebar__elem--bottom
 {
     width: 80%;
     background-color: white;
@@ -335,7 +335,7 @@ border-radius: 10px 10px 10px 10px;
 }
 
 /* Media запрос */
-@media (min-width: 425.98px){
+@media (max-width: 425.98px){
     .body-container {
       max-width: 424px;
     }
@@ -356,6 +356,11 @@ border-radius: 10px 10px 10px 10px;
     .cataloge-cards__elem
     {
         max-width: 330px;
+        justify-content: center;
+    }
+    .shop-cards
+    {
+        justify-content: center;
     }
     .cataloge-cards__body
     {
@@ -388,10 +393,6 @@ border-radius: 10px 10px 10px 10px;
     {
         width: 350px;
     }
-    .shop-sidebar
-    {
-        display: none;
-    }
     .main-content
     {
         width: 100%;
@@ -399,6 +400,13 @@ border-radius: 10px 10px 10px 10px;
     .shop-sidebar
     {
         display: none;
+    }
+    .shop-cards {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 25px;
+        justify-content: center;
     }
 
   }
@@ -426,16 +434,18 @@ border-radius: 10px 10px 10px 10px;
         flex-direction: column;
         align-content: flex-end;
         flex-wrap: wrap;
-        margin-left: -30px;
+        margin-left: -50px;
+        margin-right: 50px;
+        height: 100%;
     }
     .main-content
     {
         width: 100%;
         padding-left: 200px;
     }
-    .cataloge-main-p
-    {
-        /* font-size: 30px; */
+    .shop-cards {
+
+        justify-content: flex-start;
     }
     .cataloge-breadcrumb
     {
@@ -466,6 +476,11 @@ border-radius: 10px 10px 10px 10px;
         margin: 0 auto;
         
     }
+    .shop-sidebar
+    {
+        height: 100%;
+        margin-left: -200px;
+    }
   }
   @media (min-width: 1499.98px)
   {
@@ -474,6 +489,10 @@ border-radius: 10px 10px 10px 10px;
         width: 920px;
         margin: 0 auto;
         
+    }
+    .shop-sidebar
+    {
+        height: 100%;
     }
   }
   
