--- a/Afclub/style.css
+++ b/Afclub/style.css
@@ -20,6 +20,9 @@
 {
     --main-text-color:#333;
     --underline-text-color:#f6d472;
+    --tavern-text-color:#808000;
+    --space-text-color:#333399;
+    --arcade-text-color:#ff6600;
 }
 /* Header */
 
@@ -143,6 +146,66 @@ border: 1px solid #f6d472!important;
 text-decoration: none;
 border-radius: 5px;
 }
+#Zons
+{
+    padding: 20px 0;
+    margin-top: 130px;
+    background-color: #f7f7f7;
+}
+.zonaCard
+{
+    margin-top: 50px;
+    display: flex;
+    padding: 20px 0;
+}
+.zonaCardSecond
+{
+    margin-top: 30px;
+    display: flex;
+    background-color: white;
+    padding: 20px 0;
+}
+.zonaCardThird
+{
+    margin-top: 30px;
+    display: flex;
+    padding: 20px 0;
+}
+.car
+{
+    width: 600px;
+    height: 350px;
+}
+.zonaCardAllText
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.zonaCardMainText
+{
+    font-size: 35px;
+    text-align: center;
+}
+.zonaCardMoreText
+{
+    font-family: GPM;
+    padding: 0 20px;
+    text-align: center;
+}
+.firstTextCard
+{
+    color: var(--tavern-text-color);
+}
+.secondTextCard
+{
+    color: var(--space-text-color);
+}
+.thirdTextCard
+{
+    color: var(--arcade-text-color);
+}
 /* footer */
 /* other */
 @media (max-width:1024.99px)
@@ -170,6 +233,10 @@ border-radius: 5px;
     }
     .cardContainer{ justify-content: center;flex-direction: column;}
     .card{padding: 0;}
+    .zonaCard{flex-direction: column;}
+    .zonaCardSecond{flex-direction: column;}
+    .zonaCardThird{flex-direction: column;}
+    .car{width: 100%; height: 40%; padding: 20px 0;}
     .onComputer{display: none;}
 }
 /* Сторонее */
