--- a/Afclub/style.css
+++ b/Afclub/style.css
@@ -84,6 +84,10 @@
 
 
 /* body */
+body
+{
+    margin: 0;
+}
 .oNasContainer
 {
     display: flex;
@@ -240,7 +244,35 @@ border-radius: 5px;
     height: 100%;
     padding: 30px 0;
 }
-
+.divContactns
+{
+    display: flex;
+    flex-direction: row;
+    padding-bottom: 30px;
+}
+.info
+{
+    padding-left: 30px;
+}
+.info p 
+{
+    font-family: GPM;
+}
+.contactsText
+{
+    font-family: GPC;
+}
+.questImage
+{
+    position: absolute;
+    width: 100%;
+    height: 30%;
+}
+.questText
+{
+    position: absolute;
+    color: white;
+}
 /* Table */
 .Tables
 {
