--- a/Afclub/style.css
+++ b/Afclub/style.css
@@ -81,8 +81,24 @@
     text-decoration: none;
 
 }
-
-
+.bgModalDiv
+{ 
+    background-color: rgba(128, 128, 128, 0.555);
+    position:fixed;
+    width: 100%;
+    height: 100%;
+    bottom: 0;
+    display: none;
+}
+.modalDiv
+{
+    position: fixed;
+    left:30%;
+    bottom: 5%;
+    width: 40%;
+    height: 600px;
+    background-color: rgb(219, 212, 212);
+}
 /* body */
 body
 {
@@ -293,6 +309,12 @@ TH, TD {
 {
     border-right: 1px solid var(--main-text-color);
 }
+.GoogleMap
+{
+    width:600px;
+    height: 480px;
+    pointer-events: none;
+}
 /* footer */
 /* other */
 @media (max-width:1024.99px)
@@ -302,6 +324,7 @@ TH, TD {
         max-width: 900px;
     }
     .onMobile{display: none;}
+    .GoogleMap{width: 430px;}
 }
 @media (max-width:768.99px)
 {
@@ -315,6 +338,7 @@ TH, TD {
     .zonaCardSecond{flex-direction: column;}
     .zonaCardThird{flex-direction: column;}
     .car{width: 100%; height: 40%; padding: 20px 0;}
+    .GoogleMap{width: 451px;}
 }
 @media (max-width:425px)
 {
@@ -329,6 +353,8 @@ TH, TD {
     .zonaCardThird{flex-direction: column;}
     .car{width: 100%; height: 40%; padding: 20px 0;}
     .onComputer{display: none;}
+    .divContactns{flex-direction: column; align-items:center;}
+    .GoogleMap{width: 400px;}
 }
 /* Сторонее */
 /* Стиль меню навигации */
